fix(frontend): the navigation partially hides the pagination on mobile

--- a/modules/core/site.css
+++ b/modules/core/site.css
@@ -1009,6 +1009,8 @@ div.unseen,
 }
 .mobile .message_table {
   padding-left: 5px !important;
+}
+.mobile .message_list {
   margin-top: 30px !important;
 }
 .mobile .list_settings_link {
